...
    "allSources" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "All sources"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Toutes les sources"
...
    "byCategory" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "By category"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Par catégorie"
...
    "byCountry" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "By country"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Par pays"
...
    "byLanguage" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "By language"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Par langue"
...
    "search" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recherche"
...
